# openai_instant_assistant

./: .gitignore  README.md  pyproject.toml
openai_instant_assistant/: cli.py
tests/: test_cli.py
